Committed, but not yet released (Build 1305)
- Added _applyPrefixesAndBase method to SPARQLStruct: recursively attaches prefixes and base iri locally in force to subelements as _prefixes and _baseiri attributes
- Changed createParentPointers() to recursive form and moved it from parseStructFunc to ParseStruct.__init__()
- Changed signature of ParseStruct.__init__(): now always takes an argument ("None" for bootstrapping by parseAction)
- Added checkBases() method to SPARQLStruct: tests all iris in BaseDecls for being absolute iris 
- Added checkIris() method to SPARQLStruct: tests all iris in IRIREFs and PrefixedNames for well-formedness according to rfc3987 (after prefix processing and expansion to absolute form)
- Added Unicode escape function "unescapeUcode()" to sparqlparser
- alltests now prints version and build numbers
- Moved version info out of parsertools.__init__.py to separate file
- Renamed ParseStruct "pattern" attribute to "_pattern" 
- Converted func_test to unittest format, renamed to func_unittest
- Cleaned up code and docstrings in base.py and sparqlparser.py
- Changed SPARQLStruct classmethod expandIri() to a sparqlparser module level function
- Added design_notes.txt
- Module extras.py exists no longer, functionality moved to base.py

Version 0.2.4
- Added SPARQLStruct instance method "expandIris()" to replace all iri elements with their expansion, taking into account the prefixes and base iri in force at the location of the iri
- Added SPARQLStruct classmethod "expandIri()" that takes 
	- a iri string (conforming to either a PrefixedName or a IRIREF pattern),
	- a dictionary of prefix-value mappings,
	- and a base iri
	and returns the iri string, expanded in the context defined by prefixes and base iri.
- Added a howto.txt with a short explanation how to use the framework.
	
Version 0.2.3
- Introduced SPARQLStruct as subclass of ParseStruct, holds additional SPARQL related info
- SPARQL parser now generates SPARQLStruct objects